# project-spider

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  justfile
ansible/: justfile  requirements.yml
ansible/roles/awscli/meta/: main.yml
ansible/roles/awscli/tasks/: main.yml
docker/apps/project-spider-backend/: docker-compose.yml
python/: .gitignore
python/apps/project-spider/: README.md  justfile  pyproject.toml  requirements-build.in  requirements.in  requirements.txt
python/apps/project-spider/src/project_spider/: __main__.py  gitlab_api_service.py  request_utils.py
python/apps/project-spider/src/project_spider/cli/: __init__.py
python/apps/project-spider/tests/unit/: test_gitlab_api_service.py  test_request_utils.py
